changed css to make sure lion is visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,9 +68,9 @@ body {
   
   #lion {
     width: 500px;
-    height: 600px;
+    height: 700px;
     position: relative;
-    left: 2500px;
+    left: 1500px;
   }
   
   #giraffe {
